--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mongoose": "^6.3.6",
-    "uuid": "^8.3.2"
+    "nodemailer": "^6.7.5",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
